<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pc2_combiner</name>
  <version>0.0.0</version>
  <description>A ROS2 package to combine multiple PointCloud2 topics into a single one with provided transforms.</description>
  <maintainer email="mehmeteminbasoglu@hotmail.com">Mehmet Emin BAŞOĞLU</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <exec_depend>ros2launch</exec_depend>
</package>
